--- a/Gary/Project V1.ipynb
+++ b/Gary/Project V1.ipynb
@@ -954,7 +954,7 @@
     "In measuring the success of this campaign, the proportion of success for customers with a high school education and a college education are equal.\n",
     "\n",
     "Alternate Hypothesis:\n",
-    "This campaign was disproportionately successful \n"
+    "This campaign was more successful for one group over another.\n"
    ]
   },
   {
@@ -999,8 +999,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With This P value, we can reject the null hypothesis "
+    "With This P value, we can reject the null hypothesis that the proportions are equal."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Measuring Effect Size**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "h =  theta1 −  theta2\n",
+    "\n",
+    "theta =   2 arcsine(SQRT(P))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.04408270568413658"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1 = len(high_school_y)/len(high_school_total)\n",
+    "p2 = len(college_y)/len(college_total)\n",
+    "theta1 = np.arcsin(np.sqrt(p1))\n",
+    "theta2 = np.arcsin(np.sqrt(p2))\n",
+    "cohensh = theta1 - theta2\n",
+    "cohensh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
