--- a/Maia/bank_marketing_project.ipynb
+++ b/Maia/bank_marketing_project.ipynb
@@ -1396,6 +1396,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "p > alpha => fail to reject the null hypothesis, that means there is no difference between the subcription outcomes of the Housing's types."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -1438,11 +1445,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "p < alpha , reject the null hypothesis, that means there is difference between the subcription outcomes of the Loan's types"
+   ]
   },
   {
    "cell_type": "code",
