--- a/Maia/bank_marketing_project.ipynb
+++ b/Maia/bank_marketing_project.ipynb
@@ -760,7 +760,7 @@
     }
    ],
    "source": [
-    "# OUT COME COUNT BASED ON JOB\n",
+    "''# OUT COME COUNT BASED ON JOB\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(20, 8)\n",
     "sns.countplot(x = 'job', hue='y', data = client_info, palette='autumn')\n",
