--- a/Maia/bank_marketing_project.ipynb
+++ b/Maia/bank_marketing_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "      <th>contact</th>\n",
        "      <th>month</th>\n",
        "      <th>day_of_week</th>\n",
-       "      <th>duration</th>\n",
+       "      <th>...</th>\n",
        "      <th>campaign</th>\n",
        "      <th>pdays</th>\n",
        "      <th>previous</th>\n",
@@ -149,7 +149,7 @@
        "      <td>telephone</td>\n",
        "      <td>may</td>\n",
        "      <td>mon</td>\n",
-       "      <td>261</td>\n",
+       "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>999</td>\n",
        "      <td>0</td>\n",
@@ -173,7 +173,7 @@
        "      <td>telephone</td>\n",
        "      <td>may</td>\n",
        "      <td>mon</td>\n",
-       "      <td>149</td>\n",
+       "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>999</td>\n",
        "      <td>0</td>\n",
@@ -197,7 +197,7 @@
        "      <td>telephone</td>\n",
        "      <td>may</td>\n",
        "      <td>mon</td>\n",
-       "      <td>226</td>\n",
+       "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>999</td>\n",
        "      <td>0</td>\n",
@@ -221,7 +221,7 @@
        "      <td>telephone</td>\n",
        "      <td>may</td>\n",
        "      <td>mon</td>\n",
-       "      <td>151</td>\n",
+       "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>999</td>\n",
        "      <td>0</td>\n",
@@ -245,7 +245,7 @@
        "      <td>telephone</td>\n",
        "      <td>may</td>\n",
        "      <td>mon</td>\n",
-       "      <td>307</td>\n",
+       "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>999</td>\n",
        "      <td>0</td>\n",
@@ -259,6 +259,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -269,22 +270,24 @@
        "3   40     admin.  married     basic.6y       no      no   no  telephone   \n",
        "4   56   services  married  high.school       no      no  yes  telephone   \n",
        "\n",
-       "  month day_of_week  duration  campaign  pdays  previous     poutcome  \\\n",
-       "0   may         mon       261         1    999         0  nonexistent   \n",
-       "1   may         mon       149         1    999         0  nonexistent   \n",
-       "2   may         mon       226         1    999         0  nonexistent   \n",
-       "3   may         mon       151         1    999         0  nonexistent   \n",
-       "4   may         mon       307         1    999         0  nonexistent   \n",
+       "  month day_of_week  ...  campaign  pdays  previous     poutcome emp.var.rate  \\\n",
+       "0   may         mon  ...         1    999         0  nonexistent          1.1   \n",
+       "1   may         mon  ...         1    999         0  nonexistent          1.1   \n",
+       "2   may         mon  ...         1    999         0  nonexistent          1.1   \n",
+       "3   may         mon  ...         1    999         0  nonexistent          1.1   \n",
+       "4   may         mon  ...         1    999         0  nonexistent          1.1   \n",
        "\n",
-       "   emp.var.rate  cons.price.idx  cons.conf.idx  euribor3m  nr.employed   y  \n",
-       "0           1.1          93.994          -36.4      4.857       5191.0  no  \n",
-       "1           1.1          93.994          -36.4      4.857       5191.0  no  \n",
-       "2           1.1          93.994          -36.4      4.857       5191.0  no  \n",
-       "3           1.1          93.994          -36.4      4.857       5191.0  no  \n",
-       "4           1.1          93.994          -36.4      4.857       5191.0  no  "
+       "   cons.price.idx  cons.conf.idx  euribor3m  nr.employed   y  \n",
+       "0          93.994          -36.4      4.857       5191.0  no  \n",
+       "1          93.994          -36.4      4.857       5191.0  no  \n",
+       "2          93.994          -36.4      4.857       5191.0  no  \n",
+       "3          93.994          -36.4      4.857       5191.0  no  \n",
+       "4          93.994          -36.4      4.857       5191.0  no  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +311,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +350,7 @@
        "(41188, 21)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +561,7 @@
        "4           1.1          93.994          -36.4      4.857       5191.0  no  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +588,7 @@
        "       74, 17, 87, 91, 86, 98, 94, 84, 92, 89])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +739,7 @@
        "count  275       6013  730        870  144     293  37  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +874,7 @@
        "count        1480  251  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +981,7 @@
        "count       4136  476   22396  2532   9948  1620      68  12"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1052,7 @@
        "count       3647  605       32422  3141     479  894"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1159,7 @@
        "count    28391  4197    8154  443   3"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1230,7 @@
        "count    16596  2026     883  107  19069  2507"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1301,7 @@
        "count  30100  3850     883  107  5565  683"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
