--- a/Gary/Project V1-Current.ipynb
+++ b/Gary/Project V1-Current.ipynb
@@ -2230,11 +2230,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Final Conclusion and Recommendation\n",
+    "\n",
+    "During our various tests we learned that previous campaign outcome is very important, education and housing loan lack meaning in their statistical signigicance, and that having a personal loan is not statistically significant. \n",
+    "\n",
+    "So far, we've only conducted preliminary tests. As mentioned earlier, in order to truly hone in on the best customers and the best way to reach them, much more testing is needed. We need to test with multiple filters and conditions and continue to go deeper until we've identified several segments that we can then rank in comparison with each other. Perhaps education and housing loan lack meaning when compared within that category, but what about within those that had a successful previous campaign outcome? Even outside of previous customers I would like to know what other demographics or combinations therof have an effect on the campaign outcome. Even more, this dataset contains  info on consumer confidence and price index information. Perhaps we can find some correlation between that and a combination of other features to fine tune the strategy as well as the avatar. Again, there are many other tests I would like to perform if given more time. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reflection\n",
+    "\n",
+    "During this project, I was very intentional about mapping my course and sticking to it. I wanted to know where I was and where I was going at all times to avoid wasting time. Even still I was not able to do everything that I wanted. During this project I learned the true meaning of the term \"go where the data takes you\". Moving on from previous outcome straight into education felt forced. I wanted to go deeper into that category to discover more insights but my road map told me I couldn't. I guess that's the delecate balance of performing analysis. With limited time, you can't chase down every lead, but experience will be sure to  Moving from education into housing felt even more forced. After my failed assumption regarding the importance of education I wanted to look at age, job industry and marital status. From there, I envisioned testing the best time to reach those segments to pair the avatar with a strategy to reach them. Overall, I enjoyed this project much more than the last because of the amount of curiosity and analysis that I had a chance to perform rather than focusing on data cleaning. Another "
+   ]
   }
  ],
  "metadata": {
